@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{12F99ABD-FA1F-4F6B-ACD4-EAA2C0B9346D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivationFinder.cs" />
+    <Compile Include="ExceptionSerializer.cs" />
     <Compile Include="Feature.cs" />
     <Compile Include="FeatureManager.cs" />
     <Compile Include="FrmMain.cs">
